examples/failing/varargs.cz
function example (...args) {
    print(string(args));
}

function withOtherArgs(foo, bar, ...rest) {
    print("foo", foo);
    print("bar", bar);
    print("rest", rest.join(", "));
}
